Modifications des fichier event-bus et client : Ajout d'un control d'erreur détaillé à l'affichage

--- a/infra/k8s/my-ingress.yaml
+++ b/infra/k8s/my-ingress.yaml
@@ -3,7 +3,9 @@ kind: Ingress
 metadata:
   name: my-ingress-v2
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
+    nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.org/websocket-services: "ws-svc"
 spec:
   ingressClassName: nginx
   rules:
