--- a/infra/k8s/event_bus_delp.yaml
+++ b/infra/k8s/event_bus_delp.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: event-bus-container
-          image: event:latest
+          image: event_mod:latest
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 4005
