--- a/infra/k8s/my-ingress.yaml
+++ b/infra/k8s/my-ingress.yaml
@@ -3,11 +3,9 @@ kind: Ingress
 metadata:
   name: my-ingress-v2
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
+    kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/use-regex: "true"
-    nginx.org/websocket-services: "ws-svc"
 spec:
-  ingressClassName: nginx
   rules:
     - host: localhost
       http:
