--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,19 @@
+default:
+  image: docker:24.0.5
+  services:
+    - docker:24.0.5-dind
+  before_script:
+    - docker info
 
 stages:          # List of stages for jobs, and their order of execution
   - build
-  - test
-  - deploy
 
 build-image-job:
-  image: docker:20.10.16
   stage: build
   tags:
     - build
   services:
-    - docker:20.10.16-dind
+    - docker:24.0.5-dind
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - docker build -t $CI_REGISTRY/manos972/tp_fil_rouge/client .
