--- a/infra/k8s/client_delp.yaml
+++ b/infra/k8s/client_delp.yaml
@@ -18,3 +18,5 @@ spec:
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 3000
+      imagePullSecrets:
+        - name:app-secret
