--- a/infra/k8s/comments_delp.yaml
+++ b/infra/k8s/comments_delp.yaml
@@ -21,3 +21,5 @@ spec:
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 4001
+      imagePullSecrets:
+        - name: app-secret            
