--- a/infra/k8s/moderation_delp.yaml
+++ b/infra/k8s/moderation_delp.yaml
@@ -18,3 +18,5 @@ spec:
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 4003
+      imagePullSecrets:
+        - name: app-secret
