--- a/infra/k8s/post_delp.yaml
+++ b/infra/k8s/post_delp.yaml
@@ -21,3 +21,5 @@ spec:
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 4000
+      imagePullSecrets:
+        - name: app-secret
