--- a/infra/k8s/comments_delp.yaml
+++ b/infra/k8s/comments_delp.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: comment-container
-          image: comments:latest
+          image: registry.gitlab.com/manos972/tp_fil_rouge/comments:latest
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 4001
