--- a/infra/k8s/query_delp.yaml
+++ b/infra/k8s/query_delp.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: querycontainer
-          image: query:latest
+          image: registry.gitlab.com/manos972/tp_fil_rouge/query:latest
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 4002
