--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,4 +35,5 @@ deploy-job:
   script:
     - kubectl config use-context Manos972/k8s-connection:k8s-connection
     - kubectl get pods
+    - kubectl apply -f ./infra/k8s
 
