Modification du nom du container cicd_ to cicd-

--- a/infra/k8s/comments_delp.yaml
+++ b/infra/k8s/comments_delp.yaml
@@ -16,7 +16,7 @@ spec:
         app: comments-srv
     spec:
       containers:
-        - name: cicd_comment-container
+        - name: cicd-comment-container
           image: registry.gitlab.com/manos972/tp_fil_rouge/comments:latest
           imagePullPolicy: IfNotPresent
           ports:
