--- a/infra/k8s/query_delp.yaml
+++ b/infra/k8s/query_delp.yaml
@@ -13,7 +13,7 @@ spec:
         app: query-srv
     spec:
       containers:
-        - name: cicd_querycontainer
+        - name: cicd-querycontainer
           image: registry.gitlab.com/manos972/tp_fil_rouge/query:latest
           imagePullPolicy: IfNotPresent
           ports:
