--- a/infra/k8s/client_delp.yaml
+++ b/infra/k8s/client_delp.yaml
@@ -13,7 +13,7 @@ spec:
         app: client-srv
     spec:
       containers:
-        - name: cicd_client-srv
+        - name: cicd-client-srv
           image: registry.gitlab.com/manos972/tp_fil_rouge/client:latest
           imagePullPolicy: IfNotPresent
           ports:
