--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,18 +14,24 @@ build-image-job:
     - docker:24.0.5-dind
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+
     - docker build -t $CI_REGISTRY/manos972/tp_fil_rouge/client .
-    - docker build -t $CI_REGISTRY/manos972/tp_fil_rouge/event-bus .
-    - docker build -t $CI_REGISTRY/manos972/tp_fil_rouge/posts .
-    - docker build -t $CI_REGISTRY/manos972/tp_fil_rouge/comments .
-    - docker build -t $CI_REGISTRY/manos972/tp_fil_rouge/moderation .
-    - docker build -t $CI_REGISTRY/manos972/tp_fil_rouge/query .
     - docker push $CI_REGISTRY/manos972/tp_fil_rouge/client:latest
-    - docker push $CI_REGISTRY/manos972/tp_fil_rouge/event-bus:latest
+    
+    - docker build -t $CI_REGISTRY/manos972/tp_fil_rouge/event-bus .
+    - docker push $CI_REGISTRY/manos972/tp_fil_rouge/event-bus:latest    
+    
+    - docker build -t $CI_REGISTRY/manos972/tp_fil_rouge/posts .
     - docker push $CI_REGISTRY/manos972/tp_fil_rouge/posts:latest
+
+    - docker build -t $CI_REGISTRY/manos972/tp_fil_rouge/comments .
     - docker push $CI_REGISTRY/manos972/tp_fil_rouge/comments:latest
+
+    - docker build -t $CI_REGISTRY/manos972/tp_fil_rouge/moderation .
     - docker push $CI_REGISTRY/manos972/tp_fil_rouge/moderation:latest
-    - docker push $CI_REGISTRY/manos972/tp_fil_rouge/query:latest
+
+    - docker build -t $CI_REGISTRY/manos972/tp_fil_rouge/query .
+    - docker push $CI_REGISTRY/manos972/tp_fil_rouge/query:latest  
 
 deploy-job:
   stage: deploy
@@ -36,6 +42,8 @@ deploy-job:
     - kubectl config use-context Manos972/k8s-connection:k8s-connection
     - kubectl get pods
     - kubectl apply -f ./infra/k8s
+    - sleep 10
     - kubectl get pods
+    - sleep 10
     - kubectl get svc
-
+    - kubectl get pods
