--- a/infra/k8s/comments_delp.yaml
+++ b/infra/k8s/comments_delp.yaml
@@ -22,4 +22,15 @@ spec:
           ports:
             - containerPort: 4001
       imagePullSecrets:
-        - name: app-secret            
+        - name: app-secret
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: comments-srv
+spec:
+  selector:
+    app: comments-srv
+  ports:
+    - protocol: TCP
+      port: 4001
