--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,9 +30,13 @@ deliver-job:
   script:
     - kubectl config use-context Manos972/k8s-connection:k8s-connection
     - kubectl get pods
+    - kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.8.2/deploy/static/provider/cloud/deploy.yaml
+    - sleep 10
+    - kubectl get ingress
     - kubectl apply -f ./infra/k8s
     - sleep 10
     - kubectl get pods
-    - sleep 10
+    - sleep 5
     - kubectl get svc
+    - sleep 35
     - kubectl get pods
