--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,16 +11,7 @@ build-image-job:
     - docker:24.0.5-dind
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-    # Iterate over directories and build images
-    - |
-      for dir in */; do
-        dir=${dir%*/} # Remove trailing slash
-        if [ "$dir" != "infra" ]; then
-          image_name="$CI_REGISTRY/manos972/tp_fil_rouge/${dir}:v1.3"
-          docker build -t $image_name ./$dir
-          docker push $image_name
-        fi
-      done
+    - ./iterateFolder.sh
 
 deliver-job:
   stage: deliver
